--- a/.github/workflows/build_openwrt-ipk.yml
+++ b/.github/workflows/build_openwrt-ipk.yml
@@ -2,7 +2,7 @@
 # Author(s): sieucaocao | https://github.com/sieucaocao       #
 ###############################################################
 
-name: Build OpenWrt Package
+name: Build OpenWrt IPK Package
 
 on:
   workflow_dispatch:
