--- a/.github/workflows/build_openwrt-ipk.yml
+++ b/.github/workflows/build_openwrt-ipk.yml
@@ -41,10 +41,10 @@ jobs:
         cd openwrt
         sh dl_sdk.sh
 
-    - name: Load package feeds
-      run: |
-        cd openwrt/sdk
-        echo "src-git kenzok8 https://github.com/kenzok8/jell.git" >> feeds.conf.default
+    #- name: Load package feeds
+      #run: |
+        #cd openwrt/sdk
+        #echo "src-git kenzok8 https://github.com/kenzok8/jell.git" >> feeds.conf.default
 
     - name: Update & install feeds
       run: |
