--- a/.github/workflows/build_openwrt-pkg.yml
+++ b/.github/workflows/build_openwrt-pkg.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Load package feeds
       run: |
         cd openwrt/sdk
-        echo "src-git vietanhbui2000 https://github.com/vietanhbui2000/openwrt-packages.git" >> feeds.conf.default
+        echo "src-git kenzok8 https://github.com/kenzok8/jell.git" >> feeds.conf.default
 
     - name: Update & install feeds
       run: |
@@ -68,11 +68,8 @@ jobs:
       id: compile
       run: |
         cd openwrt/sdk
-        make package/luci-app-argon-config/compile V=s -j$(nproc)
-        make package/luci-app-clear_luci_cache/compile V=s -j$(nproc)
-        make package/luci-app-clear_ram/compile V=s -j$(nproc)
-        make package/luci-app-vsftpd/compile V=s -j$(nproc)
-        make package/luci-theme-argon/compile V=s -j$(nproc)
+        make package/luci-app-zerotier/compile V=s -j$(nproc)
+        make package/luci-app-pppoe-server/compile V=s -j$(nproc)
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
