--- a/.github/workflows/build_openwrt-pkg.yml
+++ b/.github/workflows/build_openwrt-pkg.yml
@@ -68,8 +68,8 @@ jobs:
       id: compile
       run: |
         cd openwrt/sdk
-        make package/luci-app-zerotier/compile V=s -j$(nproc)
-        make package/luci-app-pppoe-server/compile V=s -j$(nproc)
+        make package/luci-app-zerotier/compile V=s -j1
+        make package/luci-app-pppoe-server/compile V=s -j1
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
