--- a/.github/workflows/build_openwrt-pkg.yml
+++ b/.github/workflows/build_openwrt-pkg.yml
@@ -60,7 +60,7 @@ jobs:
     - name: Download packages
       run: |
         cd openwrt/sdk
-        make download V=s -j1
+        make download -j1 V=s
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
 
@@ -68,8 +68,8 @@ jobs:
       id: compile
       run: |
         cd openwrt/sdk
-        make package/luci-app-zerotier/compile V=s -j1
-        make package/luci-app-pppoe-server/compile V=s -j1
+        make package/luci-app-zerotier/compile -j1 V=s
+        make package/luci-app-pppoe-server/compile -j1 V=s
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
