--- a/.github/workflows/build_openwrt-2.yml
+++ b/.github/workflows/build_openwrt-2.yml
@@ -2,17 +2,13 @@
 # Author(s): Việt Anh Bùi | https://github.com/vietanhbui2000 #
 ###############################################################
 
-name: Build OpenWrt (Image Builder)
+name: Build OpenWrt Package
 
 on:
   workflow_dispatch:
 
 env:
-  DEVICE_NAME: xiaomi_miwifi-mini
-  BUILD_SCRIPT: configs/openwrt/imagebuilder/xiaomi_miwifi-mini.sh
-  UPLOAD_BIN_DIR: false
-  UPLOAD_FIRMWARE_DIR: true
-  DL_IMAGEBUILDER_SH: scripts/openwrt/dl_imagebuilder.sh
+  DL_SDK_SH: scripts/openwrt/dl_sdk.sh
   TZ: Asia/Ho_Chi_Minh
 
 jobs:
@@ -30,49 +26,59 @@ jobs:
       run: |
         sudo timedatectl set-timezone "$TZ"
         sudo -E apt-get update
-        sudo -E apt-get -y install build-essential libncurses5-dev libncursesw5-dev \
-        zlib1g-dev gawk git gettext libssl-dev xsltproc rsync wget unzip python
+        sudo -E apt-get -y install build-essential ccache ecj fastjar file g++ gawk \
+        gettext git java-propose-classpath libelf-dev libncurses5-dev \
+        libncursesw5-dev libssl-dev python python2.7-dev python3 unzip wget \
+        python3-distutils python3-setuptools rsync subversion swig time \
+        xsltproc zlib1g-dev
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
 
-    - name: Download Image Builder
+    - name: Download SDK
       run: |
         mkdir -p openwrt
-        cp $DL_IMAGEBUILDER_SH openwrt/dl_imagebuilder.sh
+        cp $DL_SDK_SH openwrt/dl_sdk.sh
         cd openwrt
-        sh dl_imagebuilder.sh
+        sh dl_sdk.sh
 
-    - name: Load build script
+    - name: Load package feeds
       run: |
-        cp $BUILD_SCRIPT openwrt/imagebuilder/make.sh
+        cd openwrt/sdk
+        echo "src-git vietanhbui2000 https://github.com/vietanhbui2000/openwrt-packages.git" >> feeds.conf.default
 
-    - name: Compile firmware
+    - name: Update & install feeds
+      run: |
+        cd openwrt/sdk
+        ./scripts/feeds update -a
+        ./scripts/feeds install -a
+
+    - name: Generate default configuration
+      run: |
+        cd openwrt/sdk
+        make defconfig
+
+    - name: Download packages
+      run: |
+        cd openwrt/sdk
+        make download -j8
+        find dl -size -1024c -exec ls -l {} \;
+        find dl -size -1024c -exec rm -f {} \;
+
+    - name: Compile package
       id: compile
       run: |
-        cd openwrt/imagebuilder
-        sh make.sh
+        cd openwrt/sdk
+        make package/luci-app-argon-config/compile V=s -j$(nproc)
+        make package/luci-app-clear_luci_cache/compile V=s -j$(nproc)
+        make package/luci-app-clear_ram/compile V=s -j$(nproc)
+        make package/luci-app-vsftpd/compile V=s -j$(nproc)
+        make package/luci-theme-argon/compile V=s -j$(nproc)
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
-    - name: Upload bin directory
+    - name: Upload package directory
       uses: actions/upload-artifact@main
-      if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
+      if: steps.compile.outputs.status == 'success'
       with:
-        name: ${{ env.DEVICE_NAME }}_openwrt_bin_${{ env.DATE }}
-        path: openwrt/imagebuilder/bin
-
-    - name: Prepare files
-      id: prepare
-      if: steps.compile.outputs.status == 'success' && env.UPLOAD_FIRMWARE_DIR == 'true'
-      run: |
-        cd openwrt/imagebuilder/bin/targets/*/*
-        rm -rf packages
-        echo "FIRMWARE=$PWD" >> $GITHUB_ENV
-        echo "status=success" >> $GITHUB_OUTPUT
-
-    - name: Upload firmware directory
-      uses: actions/upload-artifact@main
-      if: steps.prepare.outputs.status == 'success' && env.UPLOAD_FIRMWARE_DIR == 'true'
-      with:
-        name: ${{ env.DEVICE_NAME }}_openwrt_r${{ env.DATE }}
-        path: ${{ env.FIRMWARE }}
+        name: openwrt_package_r${{ env.DATE }}
+        path: openwrt/sdk/bin/packages
