--- a/.github/workflows/build_openwrt-2.yml
+++ b/.github/workflows/build_openwrt-2.yml
@@ -44,13 +44,13 @@ jobs:
     - name: Load package feeds
       run: |
         cd openwrt/sdk
-        echo "src-git vietanhbui2000 https://github.com/vietanhbui2000/openwrt-packages.git" >> feeds.conf.default
+        echo "src-git kenzok8 https://github.com/kenzok8/small-package.git" >> feeds.conf.default
 
     - name: Update & install feeds
       run: |
         cd openwrt/sdk
         ./scripts/feeds update -a
-        ./scripts/feeds install -a
+        ./scripts/feeds install luci-app-pppoe-server
 
     - name: Generate default configuration
       run: |
@@ -68,11 +68,7 @@ jobs:
       id: compile
       run: |
         cd openwrt/sdk
-        make package/luci-app-argon-config/compile V=s -j$(nproc)
-        make package/luci-app-clear_luci_cache/compile V=s -j$(nproc)
-        make package/luci-app-clear_ram/compile V=s -j$(nproc)
-        make package/luci-app-vsftpd/compile V=s -j$(nproc)
-        make package/luci-theme-argon/compile V=s -j$(nproc)
+        make package/luci-app-pppoe-server/compile V=s -j$(nproc)
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
