--- a/.github/workflows/build_openwrt-2.yml
+++ b/.github/workflows/build_openwrt-2.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Load package feeds
       run: |
         cd openwrt/sdk
-        echo "src-git kenzok8 https://github.com/kenzok8/small-package.git" >> feeds.conf.default
+        echo "src-git kenzok8 https://github.com/kenzok8/jell.git" >> feeds.conf.default
 
     - name: Update & install feeds
       run: |
