--- a/.github/workflows/build_openwrt-2.yml
+++ b/.github/workflows/build_openwrt-2.yml
@@ -50,7 +50,7 @@ jobs:
       run: |
         cd openwrt/sdk
         ./scripts/feeds update -a
-        ./scripts/feeds install luci-app-pppoe-server
+        ./scripts/feeds install luci-app-turboacc
 
     - name: Generate default configuration
       run: |
@@ -68,7 +68,7 @@ jobs:
       id: compile
       run: |
         cd openwrt/sdk
-        make package/luci-app-pppoe-server/compile V=s -j$(nproc)
+        make package/luci-app-turboacc/compile V=s -j$(nproc)
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
