--- a/.github/workflows/build_openwrt-pkg.yml
+++ b/.github/workflows/build_openwrt-pkg.yml
@@ -2,13 +2,13 @@
 # Author(s): Việt Anh Bùi | https://github.com/vietanhbui2000 #
 ###############################################################
 
-name: Build OpenWrt Package
+name: Build OpenWrt Package ImmortalWRT
 
 on:
   workflow_dispatch:
 
 env:
-  DL_SDK_SH: scripts/openwrt/dl_sdk.sh
+  DL_SDK_SH: scripts/immortalwrt/dl_sdk.sh
   TZ: Asia/Ho_Chi_Minh
 
 jobs:
@@ -44,13 +44,13 @@ jobs:
     - name: Load package feeds
       run: |
         cd openwrt/sdk
-        echo "src-git kenzok8 https://github.com/kenzok8/jell.git" >> feeds.conf.default
+        echo "src-git cloudflared https://github.com/animegasan/luci-app-cloudflared.git" >> feeds.conf.default
 
     - name: Update & install feeds
       run: |
         cd openwrt/sdk
         ./scripts/feeds update -a
-        ./scripts/feeds install luci-app-zerotier
+        ./scripts/feeds install luci-app-cloudflared
 
     - name: Generate default configuration
       run: |
@@ -68,7 +68,7 @@ jobs:
       id: compile
       run: |
         cd openwrt/sdk
-        make package/luci-app-zerotier/compile V=s -j$(nproc)
+        make package/luci-app-cloudflared/compile V=s -j$(nproc)
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
