--- a/.github/workflows/build_openwrt-pkg.yml
+++ b/.github/workflows/build_openwrt-pkg.yml
@@ -45,13 +45,15 @@ jobs:
       run: |
         cd openwrt/sdk
         echo "src-git cloudflared https://github.com/animegasan/luci-app-cloudflared.git" >> feeds.conf.default
-
+        echo "src-git kenzok8 https://github.com/kenzok8/jell.git" >> feeds.conf.default
+        
     - name: Update & install feeds
       run: |
         cd openwrt/sdk
         ./scripts/feeds update -a
         ./scripts/feeds install luci-app-cloudflared
-
+        ./scripts/feeds install cloudflared
+        
     - name: Generate default configuration
       run: |
         cd openwrt/sdk
@@ -69,6 +71,7 @@ jobs:
       run: |
         cd openwrt/sdk
         make package/luci-app-cloudflared/compile V=s -j$(nproc)
+        make package/cloudflared/compile V=s -j$(nproc)
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
