--- a/.github/workflows/build_openwrt-pkg.yml
+++ b/.github/workflows/build_openwrt-pkg.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Load package feeds
       run: |
         cd openwrt/sdk
-        echo "src-git cloudflared https://github.com/animegasan/luci-app-cloudflared.git" >> feeds.conf.default
+        #echo "src-git cloudflared https://github.com/animegasan/luci-app-cloudflared.git" >> feeds.conf.default
         echo "src-git kenzok8 https://github.com/kenzok8/jell.git" >> feeds.conf.default
         
     - name: Update & install feeds
@@ -70,7 +70,7 @@ jobs:
       id: compile
       run: |
         cd openwrt/sdk
-        make package/luci-app-cloudflared/compile V=s -j$(nproc)
+        #make package/luci-app-cloudflared/compile V=s -j$(nproc)
         make package/cloudflared/compile V=s -j$(nproc)
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
