--- a/.github/workflows/build_openwrt-pkg.yml
+++ b/.github/workflows/build_openwrt-pkg.yml
@@ -2,13 +2,13 @@
 # Author(s): Việt Anh Bùi | https://github.com/vietanhbui2000 #
 ###############################################################
 
-name: Build OpenWrt Package ImmortalWRT
+name: Build OpenWrt Package
 
 on:
   workflow_dispatch:
 
 env:
-  DL_SDK_SH: scripts/immortalwrt/dl_sdk.sh
+  DL_SDK_SH: scripts/openwrt/dl_sdk.sh
   TZ: Asia/Ho_Chi_Minh
 
 jobs:
@@ -44,15 +44,19 @@ jobs:
     - name: Load package feeds
       run: |
         cd openwrt/sdk
-        #echo "src-git cloudflared https://github.com/animegasan/luci-app-cloudflared.git" >> feeds.conf.default
-        echo "src-git kenzok8 https://github.com/kenzok8/jell.git" >> feeds.conf.default
+        echo "src-git packages_lienol https://github.com/Lienol/openwrt-packages.git;19.07" >> feeds.conf.default
+        echo "src-git luci_lienol https://github.com/Lienol/openwrt-luci.git;17.01" >> feeds.conf.default
+        echo "src-git routing_lienol https://git.openwrt.org/feed/routing.git;openwrt-19.07" >> feeds.conf.default
+        echo "src-git telephony_lienol https://git.openwrt.org/feed/telephony.git;openwrt-19.07" >> feeds.conf.default
+        echo "src-git freifunk_lienol https://github.com/freifunk/openwrt-packages.git;openwrt-19.07" >> feeds.conf.default
+        echo "src-git openwrt-package_lienol https://github.com/Lienol/openwrt-package.git;main" >> feeds.conf.default
+        echo "src-git openwrt-package_other https://github.com/Lienol/openwrt-package.git;other" >> feeds.conf.default
         
     - name: Update & install feeds
       run: |
         cd openwrt/sdk
         ./scripts/feeds update -a
-        ./scripts/feeds install luci-app-cloudflared
-        ./scripts/feeds install cloudflared
+        ./scripts/feeds install luci-app-turboacc
         
     - name: Generate default configuration
       run: |
@@ -70,8 +74,7 @@ jobs:
       id: compile
       run: |
         cd openwrt/sdk
-        #make package/luci-app-cloudflared/compile V=s -j$(nproc)
-        make package/cloudflared/compile V=s -j$(nproc)
+        make package/luci-app-turboacc/compile V=s -j$(nproc)
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
