--- a/.github/workflows/build_openwrt-pkg.yml
+++ b/.github/workflows/build_openwrt-pkg.yml
@@ -44,13 +44,7 @@ jobs:
     - name: Load package feeds
       run: |
         cd openwrt/sdk
-        #echo "src-git packages_lienol https://github.com/Lienol/openwrt-packages.git;19.07" >> feeds.conf.default
-        #echo "src-git luci_lienol https://github.com/Lienol/openwrt-luci.git;17.01" >> feeds.conf.default
-        #echo "src-git routing_lienol https://git.openwrt.org/feed/routing.git;openwrt-19.07" >> feeds.conf.default
-        #echo "src-git telephony_lienol https://git.openwrt.org/feed/telephony.git;openwrt-19.07" >> feeds.conf.default
-        #echo "src-git freifunk_lienol https://github.com/freifunk/openwrt-packages.git;openwrt-19.07" >> feeds.conf.default
-        #echo "src-git openwrt-package_lienol https://github.com/Lienol/openwrt-package.git;main" >> feeds.conf.default
-        echo "src-git openwrt-package_other https://github.com/Lienol/openwrt-package.git;other" >> feeds.conf.default
+        echo "src-git kenzok8 https://github.com/kenzok8/jell.git" >> feeds.conf.default
         
     - name: Update & install feeds
       run: |
