--- a/.github/workflows/build_openwrt-pkg.yml
+++ b/.github/workflows/build_openwrt-pkg.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 env:
-  DL_SDK_SH: scripts/openwrt/dl_sdk.sh
+  DL_SDK_SH: scripts/immortalwrt/dl_sdk.sh
   TZ: Asia/Ho_Chi_Minh
 
 jobs:
@@ -69,14 +69,6 @@ jobs:
       run: |
         cd openwrt/sdk
         make package/luci-app-turboacc/compile V=s -j$(nproc)
-        make package/pdnsd-alt/compile V=s -j$(nproc)
-        make package/kmod-tcp-bbr/compile V=s -j$(nproc)
-        make package/dnsforwarder/compile V=s -j$(nproc)
-        make package/dnsproxy/compile V=s -j$(nproc)
-        make package/kmod-ipt-offload/compile V=s -j$(nproc)
-        make package/kmod-fast-classifier/compile V=s -j$(nproc)
-        make package/kmod-shortcut-fe-cm/compile V=s -j$(nproc)
-        make package/kmod-shortcut-fe-drv/compile V=s -j$(nproc)
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
