--- a/.github/workflows/build_openwrt-pkg.yml
+++ b/.github/workflows/build_openwrt-pkg.yml
@@ -2,7 +2,7 @@
 # Author(s): Việt Anh Bùi | https://github.com/vietanhbui2000 #
 ###############################################################
 
-name: Build OpenWrt Package (Turboacc)
+name: Build OpenWrt Package (Immortalwrt)
 
 on:
   workflow_dispatch:
@@ -44,13 +44,13 @@ jobs:
     - name: Load package feeds
       run: |
         cd openwrt/sdk
-        echo "src-git kenzok8 https://github.com/kenzok8/jell.git" >> feeds.conf.default
+        echo "src-git stangri https://github.com/stangri/source.openwrt.melmac.net.git" >> feeds.conf.default
         
     - name: Update & install feeds
       run: |
         cd openwrt/sdk
         ./scripts/feeds update -a
-        ./scripts/feeds install luci-app-turboacc
+        ./scripts/feeds install https-dns-proxy
         
     - name: Generate default configuration
       run: |
@@ -68,7 +68,7 @@ jobs:
       id: compile
       run: |
         cd openwrt/sdk
-        make package/luci-app-turboacc/compile V=s -j$(nproc)
+        make package/https-dns-proxy/compile V=s -j$(nproc)
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
