--- a/.github/workflows/build_openwrt-opkg-official.yml
+++ b/.github/workflows/build_openwrt-opkg-official.yml
@@ -44,13 +44,13 @@ jobs:
     - name: Load package feeds
       run: |
         cd openwrt/sdk
-        echo "src-git sfe https://github.com/sieucaocao/lean-packages.git" >> feeds.conf.default
+        echo "src-git kenzok8 https://github.com/kenzok8/jell.git" >> feeds.conf.default
         
     - name: Update & install feeds
       run: |
         cd openwrt/sdk
         ./scripts/feeds update -a
-        ./scripts/feeds install luci-app-sfe
+        ./scripts/feeds install fullconenat
 
     - name: Generate default configuration
       run: |
@@ -69,9 +69,6 @@ jobs:
       run: |
         cd openwrt/sdk
         make package/fullconenat/compile V=s -j$(nproc)
-        make package/luci-app-sfe/compile V=s -j$(nproc)
-        make package/fast-classifier/compile V=s -j$(nproc)
-        make package/shortcut-fe/compile V=s -j$(nproc)
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
