--- a/.github/workflows/build_openwrt-opkg-official.yml
+++ b/.github/workflows/build_openwrt-opkg-official.yml
@@ -44,8 +44,8 @@ jobs:
     - name: Load package feeds
       run: |
         cd openwrt/sdk
-        # echo "src-git LGA1150 https://github.com/LGA1150/openwrt-fullconenat.git" >> feeds.conf.default
-        echo "src-git kenzok8 https://github.com/kenzok8/jell.git" >> feeds.conf.default
+        echo "src-git LGA1150 https://github.com/LGA1150/openwrt-fullconenat.git" >> feeds.conf.default
+        #echo "src-git kenzok8 https://github.com/kenzok8/jell.git" >> feeds.conf.default
     - name: Update & install feeds
       run: |
         cd openwrt/sdk
