--- a/.github/workflows/build_openwrt-opkg-official.yml
+++ b/.github/workflows/build_openwrt-opkg-official.yml
@@ -46,6 +46,12 @@ jobs:
         cd openwrt/sdk
         echo "src-git LGA1150 https://github.com/LGA1150/openwrt-fullconenat.git" >> feeds.conf.default
         #echo "src-git kenzok8 https://github.com/kenzok8/jell.git" >> feeds.conf.default
+
+    - name: Clone fullconenat package
+      run: |
+        cd openwrt/sdk/package
+        git clone -b master --single-branch https://github.com/LGA1150/openwrt-fullconenat fullconenat
+    
     - name: Update & install feeds
       run: |
         cd openwrt/sdk
