--- a/.github/workflows/build_openwrt-pkg.yml
+++ b/.github/workflows/build_openwrt-pkg.yml
@@ -41,21 +41,16 @@ jobs:
         cd openwrt
         sh dl_sdk.sh
 
-    - name: Git clone repository
+    - name: Load package feeds
       run: |
         cd openwrt/sdk
-        git clone https://github.com/stangri/source.openwrt.melmac.net.git
-
-    - name: Load package 
-      run: |
-        cd openwrt/sdk
-        ln -s ~/source.openwrt.melmac.net/https-dns-proxy/ ~/openwrt/sdk/package
+        echo "src-git stangri https://github.com/stangri/source.openwrt.melmac.net.git" >> feeds.conf.default
         
     - name: Update & install feeds
       run: |
         cd openwrt/sdk
         ./scripts/feeds update -a
-        ./scripts/feeds install -a
+        ./scripts/feeds install luci-app-https-dns-proxy
         
     - name: Generate default configuration
       run: |
@@ -73,7 +68,7 @@ jobs:
       id: compile
       run: |
         cd openwrt/sdk
-        make package/https-dns-proxy/compile V=s -j$(nproc)
+        make package/luci-app-https-dns-proxy/compile V=s -j$(nproc)
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
