--- a/.github/workflows/build_openwrt.yml
+++ b/.github/workflows/build_openwrt.yml
@@ -4,7 +4,7 @@
 #            coolsnowwolf | https://github.com/coolsnowwolf   #
 ###############################################################
 
-name: Build OpenWrt
+name: Build OpenWrt (Lienol)
 
 on:
   workflow_dispatch:
