--- a/.github/workflows/build_immortalwrt-tl-wr841n-v13.yml
+++ b/.github/workflows/build_immortalwrt-tl-wr841n-v13.yml
@@ -2,14 +2,14 @@
 # Author(s): Việt Anh Bùi | https://github.com/vietanhbui2000 #
 ###############################################################
 
-name: Build OpenWrt (Image Builder)
+name: Build Immortalwrt (Image Builder) tl-wr841n-v13
 
 on:
   workflow_dispatch:
 
 env:
-  DEVICE_NAME: tplink
-  BUILD_SCRIPT: configs/immortalwrt/imagebuilder/mc-mac1200r.sh
+  DEVICE_NAME: tplink_tl-wr841n-v13
+  BUILD_SCRIPT: configs/immortalwrt/imagebuilder/tl-wr841n-v13.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE_DIR: true
   DL_IMAGEBUILDER_SH: scripts/immortalwrt/dl_imagebuilder2.sh
