--- a/.github/workflows/build-openwrt-mc-mac1200r.yml
+++ b/.github/workflows/build-openwrt-mc-mac1200r.yml
@@ -13,7 +13,7 @@ env:
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE_DIR: true
   DL_IMAGEBUILDER_SH: scripts/openwrt/dl_imagebuilder.sh
-  ENABLE_WIFI_SH: scripts/openwrt/99-enable-wifi.sh
+  CUSTOMIZE_SH: scripts/openwrt/customize.sh
   TZ: Asia/Ho_Chi_Minh
 
 jobs:
@@ -47,12 +47,12 @@ jobs:
       run: |
         cp $BUILD_SCRIPT openwrt/imagebuilder/make.sh
 
-    - name: Add custom Wi-Fi configuration
+    - name: Customize firmware
       run: |
-        cp $ENABLE_WIFI_SH openwrt/99-enable-wifi.sh
+        cp $CUSTOMIZE_SH openwrt/customize.sh
         cd openwrt
-        chmod +x 99-enable-wifi.sh
-        ./99-enable-wifi.sh
+        chmod +x customize.sh
+        ./customize.sh
 
     - name: Compile firmware
       id: compile
