--- a/.github/workflows/build-openwrt-mc-mac1200r.yml
+++ b/.github/workflows/build-openwrt-mc-mac1200r.yml
@@ -1,41 +1,67 @@
-name: Build OpenWrt Firmware 
-
+###############################################################
+# Author(s): Việt Anh Bùi | https://github.com/vietanhbui2000 #
+###############################################################
+name: Build OpenWRT (Image Builder) mc-mac1200r
 on:
   workflow_dispatch:
-  
 env:
-  CUSTOMIZE_SH: scripts/openwrt/99-enable-wifi
-
+  DEVICE_NAME: mc-mac1200r
+  BUILD_SCRIPT: configs/openwrt/imagebuilder/mc-mac1200r.sh
+  UPLOAD_BIN_DIR: false
+  UPLOAD_FIRMWARE_DIR: true
+  DL_IMAGEBUILDER_SH: scripts/openwrt/dl_imagebuilder.sh
+  TZ: Asia/Ho_Chi_Minh
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-22.04
+    if: github.event.repository.owner.id == github.event.sender.id
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
-
-    - name: Setup Build Environment
+    - name: Checkout
+      uses: actions/checkout@main
+    - name: Initialize environment
+      env:
+        DEBIAN_FRONTEND: noninteractive
       run: |
-        sudo apt-get update
-        sudo apt-get install -y build-essential python3 wget unzip
-
-    - name: Download OpenWrt ImageBuilder
+        sudo timedatectl set-timezone "$TZ"
+        sudo -E apt-get update
+        sudo -E apt-get -y install build-essential libncurses5-dev libncursesw5-dev \
+        zlib1g-dev gawk git gettext libssl-dev xsltproc rsync wget unzip python
+        sudo -E apt-get -y autoremove --purge
+        sudo -E apt-get clean
+    - name: Download Image Builder
       run: |
-        wget https://downloads.openwrt.org/releases/19.07.10/targets/ar71xx/generic/openwrt-imagebuilder-19.07.10-ar71xx-generic.Linux-x86_64.tar.xz
-        tar -xf openwrt-imagebuilder-19.07.10-ar71xx-generic.Linux-x86_64.tar.xz
-        mv openwrt-imagebuilder-19.07.10-ar71xx-generic.Linux-x86_64 imagebuilder
-
-    - name: Copy Custom Files
-      run: |
-        cp -r $CUSTOMIZE_SH imagebuilder/99-enable-wifi
-
-    - name: Build OpenWrt Firmware
-      run: |
-        cd imagebuilder
-        make image PROFILE=mc-mac1200r FILES="$CUSTOMIZE_SH" PACKAGES="base-files libc libgcc busybox dropbear mtd uci opkg netifd fstools uclient-fetch logd urandom-seed urngd kmod-gpio-button-hotplug swconfig kmod-ath9k uboot-envtools wpad-basic -dnsmasq dnsmasq-full iptables ip6tables ppp ppp-mod-pppoe firewall odhcpd-ipv6only odhcp6c kmod-ipt-offload -kmod-ath10k-ct kmod-ath10k -ath10k-firmware-qca988x-ct ath10k-firmware-qca988x luci"
+        mkdir -p openwrt
+        cp $DL_IMAGEBUILDER_SH openwrt/dl_imagebuilder.sh
+        cd openwrt
+        sh dl_imagebuilder.sh
         
-    - name: Upload Artifacts
-      uses: actions/upload-artifact@v3
+    - name: Load build script
+      run: |
+        cp $BUILD_SCRIPT openwrt/imagebuilder/make.sh
+    - name: Compile firmware
+      id: compile
+      run: |
+        cd openwrt/imagebuilder
+        sh make.sh
+        echo "status=success" >> $GITHUB_OUTPUT
+        echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+    - name: Upload bin directory
+      uses: actions/upload-artifact@main
+      if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
       with:
-        name: OpenWrt-Firmware
-        path: imagebuilder/bin/targets/ath79/generic/
+        name: ${{ env.DEVICE_NAME }}_openwrt_bin_${{ env.DATE }}
+        path: openwrt/imagebuilder/bin
+    - name: Prepare files
+      id: prepare
+      if: steps.compile.outputs.status == 'success' && env.UPLOAD_FIRMWARE_DIR == 'true'
+      run: |
+        cd openwrt/imagebuilder/bin/targets/*/*
+        rm -rf packages
+        echo "FIRMWARE=$PWD" >> $GITHUB_ENV
+        echo "status=success" >> $GITHUB_OUTPUT
+    - name: Upload firmware directory
+      uses: actions/upload-artifact@main
+      if: steps.prepare.outputs.status == 'success' && env.UPLOAD_FIRMWARE_DIR == 'true'
+      with:
+        name: ${{ env.DEVICE_NAME }}_openwrt_r${{ env.DATE }}
+        path: ${{ env.FIRMWARE }}
