--- a/.github/workflows/build-openwrt-mc-mac1200r.yml
+++ b/.github/workflows/build-openwrt-mc-mac1200r.yml
@@ -10,6 +10,7 @@ env:
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE_DIR: true
   DL_IMAGEBUILDER_SH: scripts/openwrt/dl_imagebuilder.sh
+  ENABLE_WIFI: scripts/openwrt/99-enable-wifi
   TZ: Asia/Ho_Chi_Minh
 jobs:
   build:
@@ -34,7 +35,15 @@ jobs:
         cp $DL_IMAGEBUILDER_SH openwrt/dl_imagebuilder.sh
         cd openwrt
         sh dl_imagebuilder.sh
-        
+    - name: Enable wifi
+      run: |
+        cd openwrt
+        mkdir -p file
+        cd file
+        mkdir -p etc
+        cd etc
+        mkdir -p uci-defaults
+        cp $ENABLE_WIFI openwrt/file/etc/uci-defaults/rc.local
     - name: Load build script
       run: |
         cp $BUILD_SCRIPT openwrt/imagebuilder/make.sh
