--- a/.github/workflows/build-openwrt-mc-mac1200r.yml
+++ b/.github/workflows/build-openwrt-mc-mac1200r.yml
@@ -13,7 +13,7 @@ env:
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE_DIR: true
   DL_IMAGEBUILDER_SH: scripts/openwrt/dl_imagebuilder.sh
-  WIFI_ENABLE: scripts/openwrt/99_custom
+  WIFI_ENABLE: scripts/openwrt/99_custom.sh
   TZ: Asia/Ho_Chi_Minh
 
 jobs:
@@ -49,8 +49,8 @@ jobs:
 
     - name: Load custom script
       run: |
-        mkdir -p openwrt/imagebuilder/files
-        cp -r $WIFI_ENABLE openwrt/imagebuilder/files
+        mkdir -p openwrt/imagebuilder/files/etc/uci-defaults
+        cp -r $WIFI_ENABLE openwrt/imagebuilder/files/etc/uci-defaults
 
     - name: Compile firmware
       id: compile
@@ -82,3 +82,4 @@ jobs:
       with:
         name: ${{ env.DEVICE_NAME }}_openwrt_r${{ env.DATE }}
         path: ${{ env.FIRMWARE }}
+        
