--- a/.github/workflows/build-ipk(OpenWRT+ImmortalWRT).yml
+++ b/.github/workflows/build-ipk(OpenWRT+ImmortalWRT).yml
@@ -2,13 +2,13 @@
 # Author(s): Việt Anh Bùi | https://github.com/vietanhbui2000 #
 ###############################################################
 
-name: Build Package IPK
+name: Build OpenWrt Package IPK
 
 on:
   workflow_dispatch:
 
 env:
-  DL_SDK_SH: scripts/openwrt/dl_sdk-2.sh
+  DL_SDK_SH: scripts/openwrt/dl_sdk.sh
   TZ: Asia/Ho_Chi_Minh
 
 jobs:
@@ -44,13 +44,13 @@ jobs:
     - name: Load package feeds
       run: |
         cd openwrt/sdk
-        echo "src-git zerotier https://github.com/sieucaocao/packages.git" >> feeds.conf.default
+        echo "src-git stangri https://github.com/stangri/https-dns-proxy.git" >> feeds.conf.default
 
     - name: Update & install feeds
       run: |
         cd openwrt/sdk
-        ./scripts/feeds update zerotier
-        ./scripts/feeds install zerotier
+        ./scripts/feeds update -a
+        ./scripts/feeds install -a
 
     - name: Generate default configuration
       run: |
@@ -68,7 +68,7 @@ jobs:
       id: compile
       run: |
         cd openwrt/sdk
-        make package/zerotier/compile V=s -j$(nproc)
+        make package/https-dns-proxy/compile V=s -j$(nproc)
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
