--- a/.github/workflows/build-ipk(OpenWRT+ImmortalWRT).yml
+++ b/.github/workflows/build-ipk(OpenWRT+ImmortalWRT).yml
@@ -50,7 +50,7 @@ jobs:
       run: |
         cd openwrt/sdk
         ./scripts/feeds update -a
-        ./scripts/feeds install -a
+        ./scripts/feeds install luci-app-https-dns-proxy
 
     - name: Generate default configuration
       run: |
@@ -60,7 +60,7 @@ jobs:
     - name: Download packages
       run: |
         cd openwrt/sdk
-        make download V=s -j1
+        make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
 
