Update and rename build-immortalwrt-mc-mac1200r.yml to build-image-immortalwrt.yml

--- a/.github/workflows/build-image-immortalwrt.yml
+++ b/.github/workflows/build-image-immortalwrt.yml
@@ -2,7 +2,7 @@
 # Author(s): Việt Anh Bùi | https://github.com/vietanhbui2000 #
 ###############################################################
 
-name: Build ImmortalWrt (Image Builder) MAR1200r
+name: Build Image ImmortalWrt
 
 on:
   workflow_dispatch:
